--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 <h1>St Peter's Anglican Church Cremorne</h1>
 <div class="box">
      <h2>This week's <b>10/03/06</b> rosters are</h2>
-
+      tes
      <table border="1">
        <th>Person</th>
        <th> Role </th>
