--- a/src/app/Users/user-availabilities/user-availabilities.component.html
+++ b/src/app/Users/user-availabilities/user-availabilities.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <mat-card>
   <div class="loginbody">
     <h1>Login</h1>
@@ -26,3 +27,4 @@
 
   </div>
 </mat-card>
+</div>
