--- a/src/app/Users/roster/roster.component.html
+++ b/src/app/Users/roster/roster.component.html
@@ -7,7 +7,7 @@
         <td mat-cell *matCellDef="let element"> {{element.date}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="Sidesperson1">
+     <!-- <ng-container matColumnDef="Sidesperson1">
         <th mat-header-cell *matHeaderCellDef> Sidesperson </th>
         <td mat-cell *matCellDef="let element"> {{element.sidesperson1}} </td>
       </ng-container>
@@ -15,7 +15,7 @@
       <ng-container matColumnDef="Sidesperson2">
         <th mat-header-cell *matHeaderCellDef> Sidesperson </th>
         <td mat-cell *matCellDef="let element"> {{element.sidesperson2}} </td>
-      </ng-container>
+      </ng-container> -->
 
       <ng-container matColumnDef="Acolyte1">
         <th mat-header-cell *matHeaderCellDef> Acolyte </th>
@@ -27,7 +27,7 @@
         <td mat-cell *matCellDef="let element"> {{element.acolyte2}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="Intercessor">
+     <!-- <ng-container matColumnDef="Intercessor">
         <th mat-header-cell *matHeaderCellDef> Intercessor </th>
         <td mat-cell *matCellDef="let element"> {{element.intercessor}} </td>
       </ng-container>
@@ -57,49 +57,12 @@
         <td mat-cell *matCellDef="let element"> {{element.thurifer}} </td>
       </ng-container>
 
-
+-->
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+   
     </table>
-     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <mat-paginator  [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+     <br><br><br>
 </div>
-
-
-
-
-<table>
-<tr>
-  <th>Date</th>
-  <th>Sidesperson1</th>
-  <th>Sides person 2</th>
-  <th>Reader 1</th>
-  <th>Reader 2</th>
-  <th>Intercessor</th>
-  <th>Senior server</th>
-  <th>Crucifer</th>
-  <th>Acolyte 1</th>
-  <th>Acolyte 2</th>
-  <th>Chalice</th>
-  <th>Chalice</th>
-  <th>Thurifer</th>
-</tr>
-<tr *ngFor="let week of roster">
-  <td>{{week.date}}</td>
-  <td>{{week.sidesperson1}}</td>
-  <td>{{week.sidesperson2}}</td>
-  <td>{{week.reader1}}</td>
-  <td>{{week.reader2}}</td>
-  <td>{{week.intercessor}}</td>
-  <td>{{week.senSer}}</td>
-  <td>{{week.crucifer}}</td>
-  <td>{{week.acolyte1}}</td>
-  <td>{{week.acolyte2}}</td>
-  <td>{{week.chalice}}</td>
-  <td>{{week.senSer}}</td>
-  <td>{{week.thurifer}}</td>
-
-</tr>
-
-</table>
