--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,6 +12,7 @@
     right: 0;
     padding-bottom:6px;
     background-color:rgb(173,11,0);
+    //color:rgb(221,153,51);
 }
 
 
@@ -75,6 +76,6 @@ height:100vh;
 /*custom colours
 
 primary = rgb(173,11,0)
-accent = #d07b1c
+accent = rgb(221,153,51)
 
 */
