added filter and styling to roster

--- a/src/app/Users/roster/roster.component.css
+++ b/src/app/Users/roster/roster.component.css
@@ -1,3 +1,18 @@
 h1{
   text-align:center;
 }
+div{
+  display:flex;
+  margin:auto;
+  flex-direction: row;
+  flex-wrap:wrap;
+  width:90%;
+
+}
+mat-form-field{
+  margin-left:5%
+}
+table{
+  width:80%;
+  margin:auto;
+}
