--- a/src/app/Users/roster/roster.component.html
+++ b/src/app/Users/roster/roster.component.html
@@ -3,7 +3,7 @@
 
   <mat-form-field>
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-</mat-form-field>
+</mat-form-field><br>
 
     <table mat-table [dataSource]="dataSource" >
 
