--- a/src/app/Administration/admin-list/admin.component.html
+++ b/src/app/Administration/admin-list/admin.component.html
@@ -14,7 +14,7 @@
           <strong>Level:</strong>    {{item.level}}   <br>
           <strong>Approved:</strong>    {{item.approved}}   <br><br>
       <div class="listbuttons">          
-      <button mat-button mat-raised-button color="accent" [routerLink]="['/aedit', i]">edit  </button>
+      <button mat-button mat-raised-button color="accent" [routerLink]="['/aEdit', i]">edit  </button>
       <button mat-button mat-raised-button color="warn"  (click) = openDialog(i) > delete  </button> <br><br>
         <mat-divider ></mat-divider>
     </div>
