Login system fixed

--- a/src/app/Users/user-availabilities/user-availabilities.component.html
+++ b/src/app/Users/user-availabilities/user-availabilities.component.html
@@ -9,7 +9,7 @@
         <form flex [formGroup]="LoginForm" (ngSubmit)="submit()">
          
             <mat-form-field>
-              <input matInput placeholder="Firstname" name="Login_Username"  formControlName="Login_Username">
+              <input matInput placeholder="Full Name" name="Login_Username"  formControlName="Login_Username">
             </mat-form-field>
             <br>
 
