Fixed inconsistencies with editing users. Now all values will be booleans

--- a/src/app/Administration/admin-edit/admin-edit.component.html
+++ b/src/app/Administration/admin-edit/admin-edit.component.html
@@ -52,60 +52,16 @@
 					<input matInput placeholder="Days working" formControlName="freq">
 				</mat-form-field>
 
-        <mat-radio-group formControlName="crucifer" >
-          Can you serve as Crucifer?<br>
-          <mat-radio-button value=true>Yes</mat-radio-button>
-          <mat-radio-button value=false>No</mat-radio-button>
-        </mat-radio-group>
-
-        <mat-radio-group formControlName="senSer" >
-          Can you serve as Senior Server?<br>
-          <mat-radio-button value=true>Yes</mat-radio-button>
-          <mat-radio-button value=false>No</mat-radio-button>
-        </mat-radio-group>
-
-        <mat-radio-group formControlName="acolyte" >
-          Can you serve as Acolyte?<br>
-          <mat-radio-button value=true>Yes</mat-radio-button>
-          <mat-radio-button value=false>No</mat-radio-button>
-        </mat-radio-group>
-
-        <mat-radio-group formControlName="sidesperson" >
-          Can you serve as Sidesperson?<br>
-          <mat-radio-button value=true>Yes</mat-radio-button>
-          <mat-radio-button value=false>No</mat-radio-button>
-        </mat-radio-group>
-
-        <mat-radio-group formControlName="welcomer" >
-          Can you serve as Welcomer?<br>
-          <mat-radio-button value=true>Yes</mat-radio-button>
-          <mat-radio-button value=false>No</mat-radio-button>
-        </mat-radio-group>
-
-        <mat-radio-group formControlName="chalice" >
-          Can you serve as Chalice bearer?<br>
-          <mat-radio-button value=true>Yes</mat-radio-button>
-          <mat-radio-button value=false>No</mat-radio-button>
-        </mat-radio-group>
-
-        <mat-radio-group formControlName="reader" >
-          Can you serve as Reader?<br>
-          <mat-radio-button value=true>Yes</mat-radio-button>
-          <mat-radio-button value=false>No</mat-radio-button>
-        </mat-radio-group>
-
-        <mat-radio-group formControlName="intercessor" >
-          Can you serve as Intercessor?<br>
-          <mat-radio-button value=true>Yes</mat-radio-button>
-          <mat-radio-button value=false>No</mat-radio-button>
-        </mat-radio-group>
-
-        <mat-radio-group formControlName="approved" >
-          Approved?<br>
-          <mat-radio-button value=true>Yes</mat-radio-button>
-          <mat-radio-button value=false>No</mat-radio-button>
-        </mat-radio-group>
-
+         <strong>Please check the roles you wish to do</strong>
+          <mat-checkbox formControlName="crucifer" value=true> Crucifer</mat-checkbox>
+          <mat-checkbox formControlName="senSer" value=true> Senior server</mat-checkbox>
+          <mat-checkbox formControlName="acolyte" value=true> Acolyte</mat-checkbox>
+          <mat-checkbox formControlName="sidesperson" value=true> Sidesperson</mat-checkbox>
+          <mat-checkbox formControlName="welcomer" value=true> Welcomer</mat-checkbox>
+          <mat-checkbox formControlName="chalice" value=true> Chalice bearer</mat-checkbox>
+          <mat-checkbox formControlName="reader" value=true> Reader</mat-checkbox>
+          <mat-checkbox formControlName="intercessor" value=true> Intercessor</mat-checkbox>
+          <mat-checkbox formControlName="approved" value=true> approved</mat-checkbox>
 			
 
 			</div>
