Problems with rostering acolytes have been fixed (subject to change). Need to fix multiple rosters of same person on a particular week

--- a/src/app/Users/user-edit/user-edit.component.html
+++ b/src/app/Users/user-edit/user-edit.component.html
@@ -49,7 +49,8 @@
          <strong>Please check the roles you wish to do</strong>
           <mat-checkbox formControlName="crucifer" value=true> Crucifer</mat-checkbox>
           <mat-checkbox formControlName="senSer" value=true> Senior server</mat-checkbox>
-          <mat-checkbox formControlName="acolyte" value=true> Acolyte</mat-checkbox>
+          <mat-checkbox formControlName="acolyte1" value=true> Acolyte 1</mat-checkbox>
+          <mat-checkbox formControlName="acolyte2" value=true> Acolyte 2</mat-checkbox>          
           <mat-checkbox formControlName="sidesperson" value=true> Sidesperson</mat-checkbox>
           <mat-checkbox formControlName="welcomer" value=true> Welcomer</mat-checkbox>
           <mat-checkbox formControlName="chalice" value=true> Chalice bearer</mat-checkbox>
