--- a/src/app/Users/user-edit/user-edit.component.html
+++ b/src/app/Users/user-edit/user-edit.component.html
@@ -57,7 +57,10 @@
           <mat-checkbox formControlName="reader" value=true> Reader</mat-checkbox>
           <mat-checkbox formControlName="intercessor" value=true> Intercessor</mat-checkbox>
 
-			
+          <div>
+          When will you be unable to be rostered?
+          <ejs-daterangepicker formControlName="date" name="date" id='daterangepicker' placeholder='Select a range' [startDate]='start' [endDate]='end'></ejs-daterangepicker>
+          </div><br>
 
 			</div>
 
