Roster now creates every role (except reader 2 and sidesperson 2)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 
        <tr >
          <td>Sidespeople</td>
-         <td>{{roster[week].sidesperson1}}</td>
+         <td>{{roster[week].sidesperson}}</td>
        </tr>
 
        <tr >
@@ -19,7 +19,7 @@
 
       <tr >
          <td>Readers</td>
-         <td>{{roster[week].reader1}}</td>
+         <td>{{roster[week].reader}}</td>
        </tr>
 
        <tr >
