All jobs now exist in the roster

--- a/src/app/Administration/admin-edit/admin-edit.component.html
+++ b/src/app/Administration/admin-edit/admin-edit.component.html
@@ -14,8 +14,10 @@
       <strong>Crucifer:</strong> {{people[id].crucifer}} <br>
       <strong>Senior Server:</strong> {{people[id].senSer}} <br> 
       <strong>Acolyte:</strong> {{people[id].acolyte}} <br>
-      <strong>Welcomer:</strong> {{people[id].welcomer}} <br>
-      <strong>Reader:</strong> {{people[id].reader}} <br>
+      <strong>Sidesperson:</strong> {{people[id].sidesperson}} <br>
+      <strong>Sidesperson:</strong> {{people[id].sidesperson2}} <br>
+      <strong>Reader 1:</strong> {{people[id].reader}} <br>
+      <strong>Reader 2:</strong> {{people[id].reader2}} <br>
       <strong>Intercessor:</strong> {{people[id].intercessor}} <br>
       <strong>Approved:</strong> {{people[id].approved}} <br>
 
@@ -58,9 +60,10 @@
           <mat-checkbox formControlName="acolyte1" value=true> Acolyte 1</mat-checkbox>
           <mat-checkbox formControlName="acolyte2" value=true> Acolyte 2</mat-checkbox>
           <mat-checkbox formControlName="sidesperson" value=true> Sidesperson</mat-checkbox>
-          <mat-checkbox formControlName="welcomer" value=true> Welcomer</mat-checkbox>
+          <mat-checkbox formControlName="sidesperson2" value=true> Sidesperson 2</mat-checkbox>
           <mat-checkbox formControlName="chalice" value=true> Chalice bearer</mat-checkbox>
-          <mat-checkbox formControlName="reader" value=true> Reader</mat-checkbox>
+          <mat-checkbox formControlName="reader" value=true> Reader 1</mat-checkbox>
+          <mat-checkbox formControlName="reader2" value=true> Reader 2</mat-checkbox>
           <mat-checkbox formControlName="intercessor" value=true> Intercessor</mat-checkbox>
           <mat-checkbox formControlName="approved" value=true> approved</mat-checkbox>
 
