--- a/src/app/Users/register/register.component.html
+++ b/src/app/Users/register/register.component.html
@@ -38,10 +38,12 @@
           <mat-checkbox formControlName="senSer" value=true> Senior server</mat-checkbox>
           <mat-checkbox formControlName="acolyte1" value=true> Acolyte 1</mat-checkbox>
           <mat-checkbox formControlName="acolyte2" value=true> Acolyte 2</mat-checkbox>
-          <mat-checkbox formControlName="sidesperson" value=true> Sidesperson</mat-checkbox>
+          <mat-checkbox formControlName="sidesperson" value=true> Sidesperson 1</mat-checkbox>
+          <mat-checkbox formControlName="sidesperson2" value=true> Sidesperson 2</mat-checkbox>
           <mat-checkbox formControlName="welcomer" value=true> Welcomer</mat-checkbox>
           <mat-checkbox formControlName="chalice" value=true> Chalice bearer</mat-checkbox>
-          <mat-checkbox formControlName="reader" value=true> Reader</mat-checkbox>
+          <mat-checkbox formControlName="reader"  value=true> Reader 1</mat-checkbox>
+          <mat-checkbox formControlName="reader2"  value=true> Reader 2</mat-checkbox>
           <mat-checkbox formControlName="intercessor" value=true> Intercessor</mat-checkbox>
 
 
