--- a/src/app/Users/roster/roster.component.html
+++ b/src/app/Users/roster/roster.component.html
@@ -14,13 +14,23 @@
 
      <ng-container matColumnDef="Sidesperson1">
         <th mat-header-cell *matHeaderCellDef> Sidesperson </th>
-        <td mat-cell *matCellDef="let element"> {{element.sidesperson1}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.sidesperson}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Sidesperson2">
         <th mat-header-cell *matHeaderCellDef> Sidesperson </th>
         <td mat-cell *matCellDef="let element"> {{element.sidesperson2}} </td>
       </ng-container> 
+
+      <ng-container matColumnDef="Reader1">
+        <th mat-header-cell *matHeaderCellDef> Reader 1 </th>
+        <td mat-cell *matCellDef="let element"> {{element.reader}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Reader2">
+        <th mat-header-cell *matHeaderCellDef> Reader 2 </th>
+        <td mat-cell *matCellDef="let element"> {{element.reader2}} </td>
+      </ng-container>  
 
       <ng-container matColumnDef="Acolyte1">
         <th mat-header-cell *matHeaderCellDef> Acolyte </th>
@@ -50,11 +60,6 @@
       <ng-container matColumnDef="Chalice1">
         <th mat-header-cell *matHeaderCellDef> Chalice bearer </th>
         <td mat-cell *matCellDef="let element"> {{element.chalice}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="Chalice2">
-        <th mat-header-cell *matHeaderCellDef> Chalice bearer </th>
-        <td mat-cell *matCellDef="let element"> {{element.senSer}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Thurifer">
