--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,64 +2,64 @@
 
 <h1>St Peter's Anglican Church Cremorne</h1>
 <div class="box" id="error">
-     <h2>This week: <b>{{roster[week].date}}</b> roster is</h2>
+     <h2>This week: <b>{{roster.date}}</b> roster is</h2>
      <table border="1">
        <th>Role</th>
        <th> Person </th>
 
        <tr >
          <td>Sidespeople</td>
-         <td>{{roster[week].sidesperson}}</td>
+         <td>{{roster.sidesperson}}</td>
        </tr>
 
        <tr >
          <td></td>
-         <td>{{roster[week].sidesperson2}}</td>
+         <td>{{roster.sidesperson2}}</td>
        </tr>
 
       <tr >
          <td>Readers</td>
-         <td>{{roster[week].reader}}</td>
+         <td>{{roster.reader}}</td>
        </tr>
 
        <tr >
          <td></td>
-         <td>{{roster[week].reader2}}</td>
+         <td>{{roster.reader2}}</td>
        </tr>
 
        <tr >
          <td>Intercessor</td>
-         <td>{{roster[week].intercessor}}</td>
+         <td>{{roster.intercessor}}</td>
        </tr>
 
        <tr >
          <td>Senior Server</td>
-         <td>{{roster[week].senSer}}</td>
+         <td>{{roster.senSer}}</td>
        </tr>
 
        <tr >
          <td>Crucifer</td>
-         <td>{{roster[week].crucifer}}</td>
+         <td>{{roster.crucifer}}</td>
        </tr>
 
        <tr >
          <td>Acolytes</td>
-         <td>{{roster[week].acolyte1}}</td>
+         <td>{{roster.acolyte1}}</td>
        </tr>
 
        <tr >
          <td></td>
-         <td>{{roster[week].acolyte2}}</td>
+         <td>{{roster.acolyte2}}</td>
        </tr>
 
        <tr >
          <td>Chalice</td>
-         <td>{{roster[week].chalice}}</td>
+         <td>{{roster.chalice}}</td>
        </tr>
 
        <tr >
          <td></td>
-         <td>{{roster[week].senSer}}</td>
+         <td>{{roster.senSer}}</td>
        </tr>
 
       </table>
