minor navigation tweaks

--- a/src/app/Administration/admin-list/admin.component.html
+++ b/src/app/Administration/admin-list/admin.component.html
@@ -3,7 +3,7 @@
 
 <!--Lists all names in the database-->
 <h1>Admin List</h1>
-    
+ <button mat-button mat-raised-button color="warn" routerLink="/aHome"> Go back  </button>
 
         
   <mat-list-item *ngFor="let item of people; let i=index" >
