--- a/src/app/Administration/admin-roster/admin-roster.component.html
+++ b/src/app/Administration/admin-roster/admin-roster.component.html
@@ -22,7 +22,8 @@
           <button   mat-raised-button color="primary">Create Roster</button>
         </div>
       </form>
-      {{ peopleForm.value | json }} 
+      <button mat-button mat-raised-button color="warn" routerLink="/aHome"> Go back  </button>
+
 
 <br><br><br>
 
