--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -62,6 +62,11 @@
          <td>{{roster.senSer}}</td>
        </tr>
 
+       <tr >
+         <td>Thurifer</td>
+         <td>{{roster.thurifer}}</td>
+       </tr>
+
       </table>
 
 </div>
