--- a/src/app/Administration/roster-edit/roster-edit.component.html
+++ b/src/app/Administration/roster-edit/roster-edit.component.html
@@ -6,77 +6,88 @@
 
 
 	<div class="col">
-      <strong>First Name:</strong> {{people[id].fName}}<br>
-      <strong>Last Name:</strong> {{people[id].lName}} <br>
-     <strong>Contact details:</strong> {{people[id].cDetails}} <br>
-      <strong>Password:</strong> {{people[id].password}} <br>
-      <strong>Days working:</strong> {{people[id].freq}} <br>
-      <strong>Crucifer:</strong> {{people[id].crucifer}} <br>
-      <strong>Senior Server:</strong> {{people[id].senSer}} <br> 
-      <strong>Acolyte:</strong> {{people[id].acolyte}} <br>
-      <strong>Sidesperson:</strong> {{people[id].sidesperson}} <br>
-      <strong>Sidesperson:</strong> {{people[id].sidesperson2}} <br>
-      <strong>Reader 1:</strong> {{people[id].reader}} <br>
-      <strong>Reader 2:</strong> {{people[id].reader2}} <br>
-      <strong>Intercessor:</strong> {{people[id].intercessor}} <br>
-      <strong>Approved:</strong> {{people[id].approved}} <br>
+      <strong>Date:</strong> {{roster[id].date}}<br>
+      <strong>Acolyte 1:</strong> {{roster[id].acolyte1}} <br>
+     <strong>Acolyte 2:</strong> {{roster[id].acolyte2}} <br>
+      <strong>Chalice:</strong> {{roster[id].chalice}} <br>
+      <strong>Days working:</strong> {{roster[id].crucifer}} <br>
+      <strong>date:</strong> {{roster[id].intercessor}} <br>
+      <strong>Senior Server:</strong> {{roster[id].senSer}} <br> 
+      <strong>Sidesperson:</strong> {{roster[id].sidesperson}} <br>
+      <strong>Sidesperson:</strong> {{roster[id].sidesperson2}} <br>
+      <strong>Reader 1:</strong> {{roster[id].reader}} <br>
+      <strong>Reader 2:</strong> {{roster[id].reader2}} <br>
+      <strong>Thurifer:</strong> {{roster[id].thurifer}} <br>
 
 
  <p class="edit-submitted-message">
 		{{message}} <br>
-		<button mat-raised-button [routerLink]="['/aList']" [ngClass]="[bntStyle]" color="primary">Back</button>
+		<button mat-raised-button [routerLink]="['/aRoster']" [ngClass]="[bntStyle]" color="primary">Back</button>
        </p>
 	<div class="col">
     <br>
     <mat-divider></mat-divider>
     <br>
 		<h1>EDIT</h1>
-<form [formGroup]="peopleForm" (ngSubmit)="submitEdit()">
+<form [formGroup]="rosterForm" (ngSubmit)="submitEdit()">
     <div fxFlex fxLayout="row wrap" fxLayoutGap="20px">
 
 				<mat-form-field>
-					<input matInput placeholder="First name" formControlName="fName">
+					<input matInput placeholder="date" formControlName="date">
 				</mat-form-field>
 
 				<mat-form-field>
-					<input matInput placeholder="Last name" formControlName="lName">
+					<input matInput placeholder="acolyte1" formControlName="acolyte1">
 				</mat-form-field>
 
         <mat-form-field>
-					<input matInput placeholder="Contact details (Phone number or email)" formControlName="cDetails">
+					<input matInput placeholder="Acolyte 2" formControlName="acolyte2">
 				</mat-form-field>
 
         <mat-form-field>
-					<input matInput placeholder="Account Password" formControlName="password">
+					<input matInput placeholder="Chalice" formControlName="chalice">
 				</mat-form-field>
 
         <mat-form-field>
-					<input matInput placeholder="Days working" formControlName="freq">
+					<input matInput placeholder="Crucifer" formControlName="crucifer">
 				</mat-form-field>
 
-         <strong>Please check the roles you wish to do</strong>
-          <mat-checkbox formControlName="crucifer" value=true> Crucifer</mat-checkbox>
-          <mat-checkbox formControlName="senSer" value=true> Senior server</mat-checkbox>
-          <mat-checkbox formControlName="acolyte1" value=true> Acolyte 1</mat-checkbox>
-          <mat-checkbox formControlName="acolyte2" value=true> Acolyte 2</mat-checkbox>
-          <mat-checkbox formControlName="sidesperson" value=true> Sidesperson</mat-checkbox>
-          <mat-checkbox formControlName="sidesperson2" value=true> Sidesperson 2</mat-checkbox>
-          <mat-checkbox formControlName="chalice" value=true> Chalice bearer</mat-checkbox>
-          <mat-checkbox formControlName="reader" value=true> Reader 1</mat-checkbox>
-          <mat-checkbox formControlName="reader2" value=true> Reader 2</mat-checkbox>
-          <mat-checkbox formControlName="intercessor" value=true> Intercessor</mat-checkbox>
-          <mat-checkbox formControlName="approved" value=true> approved</mat-checkbox>
+        <mat-form-field>
+					<input matInput placeholder="intercessor" formControlName="intercessor">
+				</mat-form-field>
+         
+         <mat-form-field>
+					<input matInput placeholder="Reader 1" formControlName="reader">
+				</mat-form-field>
 
-          <div>
-          When will you be unable to be rostered?
-          <ejs-daterangepicker formControlName="date" name="date" id='daterangepicker' placeholder='Select a range' [startDate]='start' [endDate]='end'></ejs-daterangepicker>
-          </div><br>
+        <mat-form-field>
+					<input matInput placeholder="Reader 2" formControlName="reader2">
+				</mat-form-field>
+
+        <mat-form-field>
+					<input matInput placeholder="Senior Server" formControlName="senSer">
+				</mat-form-field>
+
+        <mat-form-field>
+					<input matInput placeholder="sidesperson 1" formControlName="sidesperson">
+				</mat-form-field>
+
+        <mat-form-field>
+					<input matInput placeholder="sidesperson 2" formControlName="sidesperson2">
+				</mat-form-field>
+
+        <mat-form-field>
+					<input matInput placeholder="Thurifer" formControlName="thurifer">
+				</mat-form-field>
+
+        <mat-form-field>
+					<input matInput placeholder="backEndDate" formControlName="backEndDate">
+				</mat-form-field>
 
 			</div>
 
       <div>
       <button class="green" type="submit" mat-raised-button>Submit</button>
-        <button class="red"  mat-raised-button (click) = openDialog(id)>Delete account</button>
       </div>
 
 </form>
