Minor edits to admin login and admin edit

--- a/src/app/Administration/admin-edit/admin-edit.component.html
+++ b/src/app/Administration/admin-edit/admin-edit.component.html
@@ -50,6 +50,10 @@
 					<input matInput placeholder="Account Password" formControlName="password">
 				</mat-form-field>
 
+        	<mat-form-field>
+					<input matInput placeholder="Admin Level (1=admin)" formControlName="level">
+				</mat-form-field>
+
         <mat-form-field>
 					<input matInput placeholder="Days working" formControlName="freq">
 				</mat-form-field>
