User edit has been fixed

--- a/src/app/Users/user-edit/user-edit.component.html
+++ b/src/app/Users/user-edit/user-edit.component.html
@@ -12,7 +12,7 @@
       <strong>Password:</strong> {{people[id].password}} <br>
       <strong>Crucifer:</strong> {{people[id].crucifer}} <br>
       <strong>Senior Server:</strong> {{people[id].senSer}} <br> 
-      <strong>Acolyte:</strong> {{people[id].acolyte}} <br>
+      <strong>Acolyte:</strong> {{people[id].acolyte1}} <br>
       <strong>Welcomer:</strong> {{people[id].welcomer}} <br>
       <strong>Reader:</strong> {{people[id].reader}} <br>
       <strong>Intercessor:</strong> {{people[id].intercessor}} <br>
