--- a/src/app/Users/register/register.component.css
+++ b/src/app/Users/register/register.component.css
@@ -1,8 +1,4 @@
- .errorMessage{
-  background-color: rgb(207, 32, 32);
-    margin: 5px 5px 5px 5px ;
-    color:white;
- }
+
 
  .mat-form-field{
    width:80%;
@@ -31,3 +27,8 @@ mat-card{
   justify-content: center;
   align-items: center;
 }
+ .errorMessage{
+  background-color: black;
+    margin: 5px 5px 5px 5px ;
+    color:red;
+ }
